--- a/src/app/components/navigation/navbar/navbar.component.html
+++ b/src/app/components/navigation/navbar/navbar.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Navbar</a>
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #cad2d1;">
+    <a class="navbar-brand">Northwind</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -19,14 +19,11 @@
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" [routerLink]="['/top5']">Top 5</a>
             <a class="dropdown-item" [routerLink]="['/histograma']">Serie Histórica</a>
-            <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Cerrar</a>
           </div>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Buscar.." aria-label="Search">
-        <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Buscar</button>
+        <button class="btn my-2 my-sm-0" style="background-color: #4f6e55; color: white;" type="submit" (click)="onSubmit()">Cerrar Sesión</button>
       </form>
     </div>
   </nav>
