--- a/src/app/pages/inicio/inicio.component.html
+++ b/src/app/pages/inicio/inicio.component.html
@@ -1,4 +1,5 @@
-<div class="jumbotron m-2">
+<app-navbar></app-navbar>
+<div class="jumbotron m-2" style="background-color: #d8dee291;">
     <h1 class="display-4">Hello, world!</h1>
     <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
     <hr class="my-4">
