--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@ng-select/ng-select/themes/material.theme.css";
+body{
+    min-height: 100vh;
+    background: #ecf1f591;
+}
